updated copyright (year, affiliation)

--- a/examples/poisson2d_fem_iterative/config/Makefile
+++ b/examples/poisson2d_fem_iterative/config/Makefile
@@ -1,4 +1,4 @@
-# copyright (C) 2013 Michel Müller (Typhoon Computing), RIKEN Advanced Institute for Computational Science (AICS)
+# Copyright (C) 2014 Michel Müller, Tokyo Institute of Technology
 
 # This file is part of Hybrid Fortran.
 
