--- a/hf_processor/MakefileForCompilationCommon
+++ b/hf_processor/MakefileForCompilationCommon
@@ -32,6 +32,11 @@ else
 DEBUG_OUTPUT=/dev/null
 endif
 
+PFLAGS=
+ifdef GPU_BUILD
+PFLAGS= -DGPU
+endif
+
 SRC_FORT=$(wildcard ./*.f90)
 SRC_PP=$(wildcard ./*.F90)
 SRC_FORT_FIXED=$(wildcard ./*.f)
@@ -72,23 +77,23 @@ ${USER_LIB}: $(OBJ)
 # since this only works with files that don't have the F90 prefix, we need to rename first.
 %.o: %.F90
 	@echo ..........compiling $< in $(CURDIR)
-	@echo ..calling "cp $< temp.P90 && pgcc $(FFLAGS) -E temp.P90 | tr "\`" '\n' > temp_$< && rm temp.P90 && $(FC) $(FFLAGS) -c temp_$< -o $@ && rm temp_$<" >${DEBUG_OUTPUT}
-	@cp $< temp.P90 && pgcc $(FFLAGS) -E temp.P90 | tr "\`" '\n' > temp_$< && rm temp.P90 && $(FC) $(FFLAGS) -c temp_$< -o $@ && rm temp_$<
+	@echo ..calling "cp $< temp.P90 && pgcc -E $(PFLAGS) temp.P90 | tr "\`" '\n' > temp_$< && rm temp.P90 && $(FC) $(FFLAGS) $(PFLAGS) -c temp_$< -o $@ && rm temp_$<" >${DEBUG_OUTPUT}
+	@cp $< temp.P90 && pgcc -E $(PFLAGS) temp.P90 | tr "\`" '\n' > temp_$< && rm temp.P90 && $(FC) $(FFLAGS) $(PFLAGS) -c temp_$< -o $@ && rm temp_$<
 
 %.o: %.f90
 	@echo ..........compiling $< in $(CURDIR)
-	@echo ..calling $(FC) $(FFLAGS) -c $< -o $@ >${DEBUG_OUTPUT}
-	@$(FC) $(FFLAGS) -c $< -o $@
+	@echo ..calling $(FC) $(FFLAGS) $(PFLAGS) -c $< -o $@ >${DEBUG_OUTPUT}
+	@$(FC) $(FFLAGS) $(PFLAGS) -c $< -o $@
 
 %.o: %.F
 	@echo ..........compiling $< in $(CURDIR)
-	@echo ..calling $(FC) $(FFLAGS) -c $< -o $@ >${DEBUG_OUTPUT}
-	@$(FC) $(FFLAGS) -c $< -o $@
+	@echo ..calling $(FC) $(FFLAGS) $(PFLAGS) -c $< -o $@ >${DEBUG_OUTPUT}
+	@$(FC) $(FFLAGS) $(PFLAGS) -c $< -o $@
 
 %.o: %.f
 	@echo ..........compiling $< in $(CURDIR)
-	@echo ..calling $(FC) $(FFLAGS) -c $< -o $@ >${DEBUG_OUTPUT}
-	@$(FC) $(FFLAGS) -c $< -o $@
+	@echo ..calling $(FC) $(FFLAGS) $(PFLAGS) -c $< -o $@ >${DEBUG_OUTPUT}
+	@$(FC) $(FFLAGS) $(PFLAGS) -c $< -o $@
 
 helper_functions.o: storage_order.F90
 helper_functions_gpu.o: storage_order.F90
