--- a/hf_processor/MakefileForCompilationCommon
+++ b/hf_processor/MakefileForCompilationCommon
@@ -78,7 +78,7 @@ ${USER_LIB}: $(OBJ)
 %.o: %.F90
 	@echo ..........compiling $< in $(CURDIR)
 	@echo ..calling "cp $< temp.P90 && pgcc -E $(PFLAGS) temp.P90 | tr "\`" '\n' > temp_$< && rm temp.P90 && $(FC) $(FFLAGS) $(PFLAGS) -c temp_$< -o $@" >${DEBUG_OUTPUT}
-	@cp $< temp.P90 && pgcc -E $(PFLAGS) temp.P90 | tr "\`" '\n' > temp_$< && rm temp.P90 && $(FC) $(FFLAGS) $(PFLAGS) -c temp_$< -o $@
+	@cp $< temp.P90 && pgcc -E $(PFLAGS) temp.P90 | tr "\`" '\n' > temp_$< && rm temp.P90 && $(FC) $(FFLAGS) $(PFLAGS) -c temp_$< -o $@ && rm temp_$<
 
 %.o: %.f90
 	@echo ..........compiling $< in $(CURDIR)
