--- a/hf_processor/MakefileForCompilationCommon
+++ b/hf_processor/MakefileForCompilationCommon
@@ -22,6 +22,7 @@
 #  Date             2013/02/01                                              #
 #  Author           Michel Müller (RIKEN)                                   #
 #***************************************************************************#
+
 include ./MakesettingsGeneral
 HYBRID_LIBRARY_FILENAME_POSTFIX?=pp
 include ./Makesettings
@@ -31,6 +32,18 @@ DEBUG_OUTPUT=&1
 else
 DEBUG_OUTPUT=/dev/null
 endif
+
+define blueecho
+@tput setaf 4
+@echo $1
+@tput sgr0
+endef
+
+define debugecho
+@tput setaf 4
+@echo $1 >${DEBUG_OUTPUT}
+@tput sgr0
+endef
 
 # WARNING: The following settings need to be repeated in MakefileCommon
 PFLAGS=
@@ -78,23 +91,23 @@ ${USER_LIB}: $(OBJ)
 # since this only works with files that don't have the F90 prefix, we need to rename first.
 # @cp $< temp.P90 && pgcc -E $(PFLAGS) temp.P90 | tr "\`" '\n' > temp_$< && rm temp.P90 && $(FC) $(FFLAGS) $(PFLAGS) -c temp_$< -o $@ && rm temp_$<
 %.o: %.F90
-	@echo ..........compiling $< in $(CURDIR)
-	@echo ..calling "cp $< temp.P90 && pgcc -E $(PFLAGS) temp.P90 | tr "\`" '\n' > temp_$< && rm temp.P90 && $(FC) $(FFLAGS) $(PFLAGS) -c temp_$< -o $@" >${DEBUG_OUTPUT}
+	$(call blueecho,"..........compiling $< in $(CURDIR)")
+	$(call debugecho,"cp $< temp.P90 && pgcc -E $(PFLAGS) temp.P90 | tr "\`" '\n' > temp_$< && rm temp.P90 && $(FC) $(FFLAGS) $(PFLAGS) -c temp_$< -o $@")
 	@cp $< temp.P90 && pgcc -E $(PFLAGS) temp.P90 | tr "\`" '\n' > temp_$< && $(FC) $(FFLAGS) $(PFLAGS) -c temp_$< -o $@
 
 %.o: %.f90
-	@echo ..........compiling $< in $(CURDIR)
-	@echo ..calling $(FC) $(FFLAGS) $(PFLAGS) -c $< -o $@ >${DEBUG_OUTPUT}
+	$(call blueecho,"..........compiling $< in $(CURDIR)")
+	$(call debugecho,"..calling $(FC) $(FFLAGS) $(PFLAGS) -c $< -o $@")
 	@$(FC) $(FFLAGS) $(PFLAGS) -c $< -o $@
 
 %.o: %.F
-	@echo ..........compiling $< in $(CURDIR)
-	@echo ..calling $(FC) $(FFLAGS) $(PFLAGS) -c $< -o $@ >${DEBUG_OUTPUT}
+	$(call blueecho,"..........compiling $< in $(CURDIR)")
+	$(call debugecho,"..calling $(FC) $(FFLAGS) $(PFLAGS) -c $< -o $@")
 	@$(FC) $(FFLAGS) $(PFLAGS) -c $< -o $@
 
 %.o: %.f
-	@echo ..........compiling $< in $(CURDIR)
-	@echo ..calling $(FC) $(FFLAGS) $(PFLAGS) -c $< -o $@ >${DEBUG_OUTPUT}
+	$(call blueecho,"..........compiling $< in $(CURDIR)")
+	$(call debugecho,"..calling $(FC) $(FFLAGS) $(PFLAGS) -c $< -o $@")
 	@$(FC) $(FFLAGS) $(PFLAGS) -c $< -o $@
 
 helper_functions.o: storage_order.F90
