fixed build system such that it is consistent without cleans

--- a/examples/tracing/config/Makefile
+++ b/examples/tracing/config/Makefile
@@ -32,5 +32,5 @@ time_profiling.o : helper_functions.o
 # ADD YOUR DEPENDENCIES BELOW THIS LINE
 # -------->
 
-example.o: ${USER_LIB}
+example.o: helper_functions.o ${USER_LIB}
 
