--- a/hf_processor/MakefileForCompilationCommon
+++ b/hf_processor/MakefileForCompilationCommon
@@ -34,15 +34,15 @@ DEBUG_OUTPUT=/dev/null
 endif
 
 define blueecho
-@tput setaf 4
+@[ -t 1 ] && tput setaf 4
 @echo $1
-@tput sgr0
+@[ -t 1 ] && tput sgr0
 endef
 
 define debugecho
-@tput setaf 4
+@[ -t 1 ] && tput setaf 4
 @echo $1 >${DEBUG_OUTPUT}
-@tput sgr0
+@[ -t 1 ] && tput sgr0
 endef
 
 # WARNING: The following settings need to be repeated in MakefileCommon
@@ -52,9 +52,8 @@ PFLAGS= -DGPU
 endif
 
 SRC_FORT=$(wildcard ./*.f90)
-SRC_PP=$(wildcard ./*.F90)
+SRC_PP=$(wildcard ./*.P90)
 SRC_FORT_FIXED=$(wildcard ./*.f)
-SRC_PP=$(wildcard ./*.F90)
 SRC_PP_FIXED=$(wildcard ./*.F)
 SRC=${SRC_FORT} ${SRC_PP} ${SRC_FORT_FIXED} ${SRC_PP_FIXED}
 
@@ -63,7 +62,7 @@ EXECUTABLES_OUT=$(patsubst %,%.out,${EXECUTABLES_POST})
 EXECUTABLES_O=$(patsubst %,%.o,${EXECUTABLES_POST})
 
 OBJ_PRE1=$(SRC:.f90=.o)
-OBJ_PRE2=$(OBJ_PRE1:.F90=.o)
+OBJ_PRE2=$(OBJ_PRE1:.P90=.o)
 OBJ_PRE3=$(OBJ_PRE2:.f=.o)
 OBJ_PRE4=$(OBJ_PRE3:.F=.o)
 OBJ_PRE5=$(patsubst ./%,%,${OBJ_PRE4})
@@ -71,9 +70,11 @@ OBJ=$(filter-out $(EXECUTABLES_O),$(OBJ_PRE5))
 
 USER_LIB=lib${HYBRID_LIBRARY_FILENAME_POSTFIX}.a
 
-.SUFFIXES : .out .o .il .F90 .f90 .F .f
-
 VPATH=$OBJDIR
+
+.SUFFIXES: .out .o .il .F90 .f90 .F .f .P90
+# Do not delete intermediate f90 files
+.PRECIOUS: %.f90
 
 all: ${EXECUTABLES_OUT} ${USER_LIB}
 
@@ -88,12 +89,11 @@ ${USER_LIB}: $(OBJ)
 	@$(AR) $(ARFLAGS) $@ $(OBJ)
 
 # we first preprocess with pgcc so we get concatenation / stringification.
-# since this only works with files that don't have the F90 prefix, we need to rename first.
-# @cp $< temp.P90 && pgcc -E $(PFLAGS) temp.P90 | tr "\`" '\n' > temp_$< && rm temp.P90 && $(FC) $(FFLAGS) $(PFLAGS) -c temp_$< -o $@ && rm temp_$<
-%.o: %.F90
-	$(call blueecho,"..........compiling $< in $(CURDIR)")
-	$(call debugecho,"cp $< temp.P90 && pgcc -E $(PFLAGS) temp.P90 | tr "\`" '\n' > temp_$< && rm temp.P90 && $(FC) $(FFLAGS) $(PFLAGS) -c temp_$< -o $@")
-	@cp $< temp.P90 && pgcc -E $(PFLAGS) temp.P90 | tr "\`" '\n' > temp_$< && $(FC) $(FFLAGS) $(PFLAGS) -c temp_$< -o $@
+# since this only works with files that don't have the F90 prefix, we use P90 here
+%.f90: %.P90
+	$(call blueecho,"..........preprocessing $< in $(CURDIR)")
+	$(call debugecho,"..calling pgcc -E $(PFLAGS) $< | tr "\`" '\n' > $@")
+	@pgcc -E $(PFLAGS) $< | tr "\`" '\n' > $@
 
 %.o: %.f90
 	$(call blueecho,"..........compiling $< in $(CURDIR)")
